Updates from Overleaf

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -2944,7 +2944,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Cambridge},
 	author = {Jackendoff, Ray S},
 	publisher = {MIT Press},
-	title = { ̄X-syntax: {{A}} Study of Phrase Structure},
+	title = {{\={X}}-syntax: {{A}} Study of Phrase Structure},
 	year = {1977}
 }
 
