--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@ colorlinks,citecolor=brown,,
 \input{localpackages.tex}
 \input{localhyphenation.tex}
 \addbibresource{localbibliography.bib}
+\WarningFilter{microtype}{Unknown slot} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Frontmatter                      %%% 
