--- a/localpackages.tex
+++ b/localpackages.tex
@@ -5,6 +5,7 @@
 
 \usepackage{langsci-gb4e}
 \usepackage{langsci-optional}
+\usepackage{./langsci/styles/langsci-textipa}
 
 \usepackage{slgloss} %for sign language glosses
 \usepackage{slglossl} %for sign language glosses => left-aligned
@@ -18,7 +19,7 @@
 \newcommand{\cmark}{\ding{51}}% \cmark
 \newcommand{\xmark}{\ding{55}}%
 
-\usepackage{bold-extra}
+% \usepackage{bold-extra}
 \usepackage{multicol}
 \usepackage{tikz} % for tikz trees
 \usepackage{tikz-qtree} % for tikz trees
@@ -47,15 +48,15 @@ headfont=\bfseries]%
 \usepackage{color} %Für bunte Tabellen
 \usepackage{array} %Für bunte Tabellen
 \usepackage{ragged2e} %Für schönere Tabellen
-\setlength{\tabcolsep}{5pt}%Abstand zwischen den Spalten einer Tabelle
-\renewcommand{\arraystretch}{1.1}%Abstand zwischen den Zeilen einer Tabelle
+% \setlength{\tabcolsep}{5pt}%Abstand zwischen den Spalten einer Tabelle
+% \renewcommand{\arraystretch}{1.1}%Abstand zwischen den Zeilen einer Tabelle
 \usepackage{amsfonts} % for the pragmatic inference marker \leadsto
 
  \newcolumntype{L}[1]{>{\raggedright\arraybackslash}p{#1}} % Tabel Tabelle left-aligned ohne L\"ocher
  
 
 
-\usepackage{tipa}
-\newcommand\tiparmdefault{cmr} % needs to be ptm if using mathptmx
-\renewcommand{\textipa}[1]{{\fontencoding{T3}\fontfamily{\tiparmdefault}\selectfont#1}}
-\renewenvironment{IPA}{\fontencoding{T3}\fontfamily{\tiparmdefault}\selectfont}{}
+% \usepackage{tipa}
+% \newcommand\tiparmdefault{cmr} % needs to be ptm if using mathptmx
+% \renewcommand{\textipa}[1]{{\fontencoding{T3}\fontfamily{\tiparmdefault}\selectfont#1}}
+% \renewenvironment{IPA}{\fontencoding{T3}\fontfamily{\tiparmdefault}\selectfont}{}
