--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@ colorlinks,citecolor=brown,,
 \input{localhyphenation.tex}
 \addbibresource{localbibliography.bib}
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Frontmatter                      %%% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
@@ -29,9 +30,9 @@ colorlinks,citecolor=brown,,
 {\sloppy\tableofcontents}
 
 % \include{chapters/dedication} %dedication goes to localmetadata.tex
-\include{chapters/preface}
-\include{chapters/acknowledgments}
-\include{chapters/abbreviations} 
+%\include{chapters/preface}
+%\include{chapters/acknowledgments}
+%\include{chapters/abbreviations} 
 % \include{chapters/notation} 
 
 
@@ -41,7 +42,14 @@ colorlinks,citecolor=brown,,
 %%             Chapters                         %%% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+
+
+%%%%%%The content of chapters/00 can be ignored
 % \include{chapters/00}
+%%%%%%The content of chapters/00 can be ignored
+
+
 \include{chapters/01}
 \include{chapters/02}
 \include{chapters/03}
