Updates from Overleaf

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -4501,6 +4501,18 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	year = {1981}
 }
 
+@article{kiss1998identificational,
+  title={Identificational focus versus information focus},
+  author = {É. Kiss, Katalin},
+  journal={Language},
+  volume={74},
+  number={2},
+  pages={245--273},
+  year={1998},
+  publisher={Linguistic Society of America}
+}
+
+
 @article{kimmelman2012word,
 	author = {Kimmelman, Vadim},
 	journal = {Linguistics in Amsterdam},
@@ -5015,6 +5027,21 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	year = {1986}
 }
 
+
+@incollection{cinque2001restructuring,
+	address = {Amsterdam},
+	author = {Cinque, Guglielmo},
+	booktitle = {Current Studies in {I}talian Syntax. {E}ssays Offered to {L}orenzo {R}enzi},
+	editor = {Cinque, Guglielmo and Salvi, Giampaolo},
+	pages = {137--155},
+	publisher = {Elsevier},
+	title = {``Restructuring'' and the order of aspectual and root modal heads},
+	year = {2001}
+}
+
+
+
+
 @article{churng2011syntax,
 	author = {Churng, Sarah Ruth},
 	doi = {10.1075/sll.14.1.03chu},
@@ -5042,7 +5069,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{chomsky1999derivation,
 	address = {Cambridge},
 	author = {Chomsky, Noam Avram},
-	booktitle = {Ken Hale: A Life in Language},
+	booktitle = {{Ken} {Hale}: A Life in Language},
 	editor = {Kenstowicz, Michael},
 	pages = {1--52},
 	publisher = {MIT Press},
@@ -5054,7 +5081,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{chomsky1999,
 	address = {Cambridge},
 	author = {Chomsky, Noam Avram},
-	booktitle = {Ken Hale: A Life in Language},
+	booktitle = {{Ken} {Hale}: A Life in Language},
 	editor = {Kenstowicz, Michael},
 	pages = {1--52},
 	publisher = {MIT Press},
