--- a/main.tex
+++ b/main.tex
@@ -50,12 +50,12 @@ colorlinks,citecolor=brown,,
 %%%%%%The content of chapters/00 can be ignored
 
 
-\include{chapters/01}
-\include{chapters/02}
+%\include{chapters/01}
+%\include{chapters/02}
 \include{chapters/03}
-\include{chapters/04}
-\include{chapters/05}
-\include{chapters/06}
+%\include{chapters/04}
+%\include{chapters/05}
+%\include{chapters/06}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Backmatter                       %%% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
