Updates from Overleaf

--- a/backmatter.tex
+++ b/backmatter.tex
@@ -12,11 +12,11 @@
 \printindex 
 \cleardoublepage
   
-\phantomsection 
-\addcontentsline{toc}{section}{Language Index}
-\ohead{\lsLanguageIndexTitle} 
-\printindex[lan] 
-\cleardoublepage
+%\phantomsection 
+%\addcontentsline{toc}{section}{Language Index}
+%\ohead{\lsLanguageIndexTitle} 
+%\printindex[lan] 
+%\cleardoublepage
   
 \phantomsection 
 \addcontentsline{toc}{section}{Subject Index}
