--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -31,7 +31,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @phdthesis{thornton1990adventures,
 	address = {Storrs},
-	author = {Thornton, Rosalind Jean},
+	author = {Thornton, Rosalind},
 	school = {University of Conneticut},
 	title = {Adventures in Long-Distance Moving: {{T}}he Acquisition of Complex {Wh}-Questions},
 	year = {1994}
@@ -47,7 +47,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @phdthesis{shaffer2000syntactic,
 	address = {Albuquerque},
-	author = {Shaffer, Barbara Jean},
+	author = {Shaffer, Barbara},
 	school = {University of New Mexico},
 	title = {A syntactic, pragmatic analysis of the expression of necessity and possibility in {{American}} {Sign} {Language}},
 	year = {2000}
@@ -151,7 +151,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @phdthesis{lillo1986parameter,
 	address = {San Diego},
-	author = {Lillo-Martin, Diane Carolyn},
+	author = {Lillo-Martin, Diane},
 	school = {University of California},
 	title = {Parameter setting: {{{E}}}vidence from use, acquisition, and breakdown in {{American}} {Sign} {Language}},
 	year = {1986}
@@ -390,7 +390,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @misc{dgb,
-	author = {Deutscher Gehörlosenbund},
+	author = {{Deutscher Gehörlosenbund}},
 	howpublished = {Accessed 16th July 2019},
 	title = {Gehörlosigkeit},
 	url = {http://www.gehoerlosen-bund.de/faq/geh%C3%B6rlosigkeit},
@@ -2295,7 +2295,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @incollection{bergmandahl1994,
 	address = {Mouton de Gruyter},
-	author = {Bergman, Brita and Dahl, Östen},
+	author = {Bergman, Brita and Dahl, {Ö}sten},
 	booktitle = {Tense, aspect and action: {{{E}}}mpirical and theoretical contributions to language typology},
 	editor = {Bache, Carl and Basbøll, Hans and Basboll, Hans and Lindberg, Carl-Erik},
 	pages = {397--422},
@@ -2589,7 +2589,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @book{sohn1980ulithian,
 	address = {Canberra},
-	author = {Sohn, Ho-min and Bender, Byron Wilbur},
+	author = {Sohn, Ho-Min and Bender, Byron Wilbur},
 	publisher = {Department of Linguistics},
 	title = {A {{Ulithian}} grammar},
 	year = {1980}
@@ -2736,7 +2736,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @book{neidle2000syntax,
 	address = {Cambridge},
-	author = {Neidle, Carol Jan and Kegl, Judy and MacLaughlin, Dawn and Bahan, Benjamin and Lee, Robert Gerald},
+	author = {Neidle, Carol and Kegl, Judy Anne and MacLaughlin, Dawn and Bahan, Benjamin and Lee, Robert Gerald},
 	publisher = {MIT Press},
 	title = {Syntax of {{American}} {Sign} {Language}: {{F}}unctional Categories and Hierarchical Structure},
 	year = {2000}
@@ -3409,7 +3409,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @book{baker1980american,
 	address = {Silver Spring},
-	author = {Baker-Shenk, Charlotte Lee and Cokely, Dennis},
+	author = {Baker-Shenk, Charlotte and Cokely, Dennis},
 	publisher = {T. J. Publishers},
 	title = {{{American}} {Sign} {Language}: {{A}} teacher's resource text on grammar and culture},
 	year = {1980}
@@ -3738,7 +3738,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{travis1988syntax,
-	author = {Travis, Lisa},
+	author = {Travis, Lisa deMena},
 	journal = {McGill Working Papers in Linguistics},
 	pages = {280--310},
 	title = {The syntax of adverbs},
@@ -4036,7 +4036,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{poizner1992neural,
-	author = {Poizner, Howard and Kegl, Judy},
+	author = {Poizner, Howard and Kegl, Judy Anne},
 	journal = {Aphasiology},
 	number = {3},
 	pages = {219--256},
@@ -4208,7 +4208,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{neidle1998rightward,
-	author = {Neidle, Carol and MacLaughlin, Dawn and Lee, Robert Gerald and Bahan, Benjamin and Kegl, Judy},
+	author = {Neidle, Carol and MacLaughlin, Dawn and Lee, Robert Gerald and Bahan, Benjamin and Kegl, Judy Anne},
 	journal = {Language},
 	number = {4},
 	pages = {819--831},
@@ -4219,7 +4219,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @misc{neidle1994architecture,
-	author = {Neidle, Carol and Kegl, Judy and Bahan, Benjamin},
+	author = {Neidle, Carol and Kegl, Judy Anne and Bahan, Benjamin},
 	howpublished = {Talk presented at Harvard University, Cambridge, MA},
 	title = {The Architecture of Functional Categories in {{American}} {Sign} {Language}},
 	year = {1994}
@@ -4379,7 +4379,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{loew1997fractionation,
-	author = {Loew, Ruth and Kegl, Judy and Poizner, Howard},
+	author = {Loew, Ruth and Kegl, Judy Anne and Poizner, Howard},
 	journal = {Aphasiology},
 	number = {3},
 	pages = {263--281},
@@ -4524,7 +4524,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{kegl1997crosslinguistic,
-	author = {Kegl, Judy and Poizner, Howard},
+	author = {Kegl, Judy Anne and Poizner, Howard},
 	journal = {Aphasiology},
 	number = {1},
 	pages = {1--37},
@@ -4535,7 +4535,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{kegl1991interplay,
-	author = {Kegl, Judy and Poizner, Howard},
+	author = {Kegl, Judy Anne and Poizner, Howard},
 	journal = {Journal of Clinical and Experimental Neuropsychology},
 	number = {1},
 	pages = {38--39},
@@ -5221,12 +5221,12 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{bobaljik1998two,
-	author = {Bobaljik, Jonathan David and Thráinsson, H{ö}skuldur},
+	author = {Bobaljik, Jonathan and Thráinsson, H{ö}skuldur},
 	journal = {Syntax},
 	number = {1},
 	pages = {37--71},
 	publisher = {Wiley Online Library},
-	sortname = {Bobaljik, Jonathan David and Thrainsson, H{o}skuldur},
+	sortname = {Bobaljik, Jonathan and Thrainsson, H{o}skuldur},
 	title = {Two heads aren't always better than one},
 	volume = {1},
 	year = {1998}
@@ -5421,7 +5421,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{aarons1992clausal,
-	author = {Aarons, Debra and Bahan, Benjamin and Kegl, Judy and Neidle, Carol},
+	author = {Aarons, Debra and Bahan, Benjamin and Kegl, Judy Anne and Neidle, Carol},
 	journal = {Nordic Journal of Linguistics},
 	number = {2},
 	pages = {103--142},
