--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -6,7 +6,10 @@
 \renewcommand{\lsSeries}{ogs} % use lowercase acronym, e.g. sidl, eotms, tgdi
 \renewcommand{\lsSeriesNumber}{4} %will be assigned when the book enters the proofreading stage
 
-\BackBody{Change your blurb in localmetadata.tex}
+\BackBody{This book presents a hypothesis-based description of the clausal structure of German Sign Language (DGS). The structure of the book is based on the three clausal layers CP, IP/TP, and VoiceP. The main hypothesis is that scopal height is expressed iconically in sign languages: the higher the scope of an operator, the higher the articulator used for its expression. The book was written with two audiences in mind: On the one hand it addresses linguists interested in sign languages and on the other hand it addresses cartographers. 
+
+
+}
 
 \dedication{Tot linguae quot membra viro; mirabilis est ars \\ Quae facit articulos ore silente loqui.\bigskip
 
