--- a/main.tex
+++ b/main.tex
@@ -29,11 +29,11 @@ colorlinks,citecolor=brown,,
 \currentpdfbookmark{Contents}{name} % adds a PDF bookmark
 {\sloppy\tableofcontents}
 
- \include{chapters/dedication} %dedication goes to localmetadata.tex
-\include{chapters/preface}
-\include{chapters/acknowledgments}
-\include{chapters/abbreviations} 
- \include{chapters/notation} 
+%\include{chapters/dedication} %dedication goes to localmetadata.tex
+%\include{chapters/preface}
+%\include{chapters/acknowledgments}
+%\include{chapters/abbreviations} 
+%\include{chapters/notation} 
 
 
 \mainmatter     
@@ -50,9 +50,9 @@ colorlinks,citecolor=brown,,
 %%%%%%The content of chapters/00 can be ignored
 
 
-\include{chapters/01}
+%\include{chapters/01}
 %\include{chapters/02}
-%\include{chapters/03}
+\include{chapters/03}
 %\include{chapters/04}
 %\include{chapters/05}
 %\include{chapters/06}
