--- a/localpackages.tex
+++ b/localpackages.tex
@@ -25,7 +25,7 @@
 \usepackage{multicol}
 \usepackage{tikz} % for tikz trees
 \usepackage{tikz-qtree} % for tikz trees
-\usetikzlibrary{arrows,arrows.meta} % for number lines / Zahlenstrahl
+\usetikzlibrary{arrows,arrows.meta,backgrounds} % for number lines / Zahlenstrahl
 
 %%%%%%%%%%SIDE NOTES%%%%%%%%%%
 \usepackage{cleveref}
