--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@ colorlinks,citecolor=brown,
 \input{localcommands.tex} 
 \addbibresource{localbibliography.bib}
 
-% \includeonly{chapters/01}
+\includeonly{chapters/01}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Frontmatter                      %%% 
