--- a/localcommands.tex
+++ b/localcommands.tex
@@ -4,3 +4,5 @@
 
 \renewcommand{\lsCoverTitleFont}[1]{\sffamily\addfontfeatures{Scale=MatchUppercase}\fontsize{39pt}{13.5mm}\selectfont #1}
 \renewcommand{\lsBackTitleFont}{\sffamily\addfontfeatures{Scale=MatchUppercase}\fontsize{20pt}{10mm}\selectfont}
+
+\renewcommand{\lsYear}{2020}
