typesetting up to 3.6.2.

--- a/langsci/styles/langsci-optional.sty
+++ b/langsci/styles/langsci-optional.sty
@@ -224,7 +224,7 @@
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
 \newcolumntype{d}[1]{D{.}{.}{#1}} 
-\newcommand{\xxref}[2]{(\ref{#1}--\ref{#2})}
+% \newcommand{\xxref}[2]{(\ref{#1}--\ref{#2})}
 
 
 % Underlining in gb4e-example Environments. Usual underlining commands that span multiple words do not work, because gb4e would parse it as one word. 
